ts7_server/k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts7-server-deployment
  labels:
    app: ts7-server
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ts7-server
  template:
    metadata:
      labels:
        app: ts7-server
    spec:
      imagePullSecrets:
      - name: timeweb-registry-secret

      containers:
      - name: ts7-server
        
        image: dbe81550-wise-chickadee.registry.twcstorage.ru/ts7-server:latest
        command: ["/usr/local/bin/server", "--mode", "production", "--role", "monolith"]

        imagePullPolicy: Always 

        ports:
        - containerPort: 8080 
        - containerPort: 8081 
        - containerPort: 8082 

        readinessProbe:
          httpGet:
            path: / 
            port: 8082
          initialDelaySeconds: 20 
          periodSeconds: 15     

        livenessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 60 
          periodSeconds: 30
