ts7_server/k8s/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts7-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  tls:
  - hosts:
    - api7.my-points.ru
    - web7.my-points.ru
    - insights7.my-points.ru
    secretName: serverpod-tls-ts7
  rules:
  - host: "api7.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts7-server-service
            port:
              name: api
  - host: "web7.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts7-server-service
            port:
              name: web
  - host: "insights7.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ts7-server-service
            port:
              name: insights
